--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* this for googlr fontds */ 
 @import url('https://fonts.googleapis.com/css2?family=Trirong:wght@500&display=swap');
 
 /* background image for home page*/
